# LearnCGM

CGM/: CGM.cpp  CGM.h  CMakeLists.txt
CGM/include/: common.h
CGM/include/eul/: eul.h
CGM/include/mat/: mat3.h  mat4.h
CGM/include/quater/: quater.h
CGM/include/transform/: transform.h
CGM/include/vec/: vec3.h
CGM/src/eul/: eul.cpp
CGM/src/mat/: mat3.cpp  mat4.cpp
CGM/src/quater/: quater.cpp
CGM/src/transform/: tranform.cpp
CGM/src/vec/: vec3.cpp
CGM/tests/: CMakeLists.txt  main.cpp
CGM/tests/eul_test/: eul_test.h
CGM/tests/mat/: mat4_test.cpp
CGM/tests/mat_test/: mat4_test.h
CGM/tests/utill/: utill.h
